--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoMVVM"
         tools:targetApi="31">
-        <activity android:name=".view.HelloWorld"
+        <activity android:name=".view.ProfileActivity"
             android:exported="false">
         </activity>
         <activity android:name=".view.MessagesActivity"
