--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,21 +14,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoMVVM"
         tools:targetApi="31">
-        <activity android:name=".view.ProfileActivity"
-            android:exported="false">
-        </activity>
-        <activity android:name=".view.MessagesActivity"
-            android:exported="false">
-        </activity>
         <activity
-            android:name=".view.MainActivity"
-            android:exported="true">
+            android:name=".View.SignUpActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="false" />
+        <activity
+            android:name=".View.ProfileActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".View.MessagesActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".View.SignInActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".firebase.MessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
